--- a/main.ipynb
+++ b/main.ipynb
@@ -25,9 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subjects = ['Pilot_1', 'Pilot_2', 'Pilot_4', 'Pilot_5', 'Pilot_6', 'Pilot_7', 'Pilot_8', 'Pilot_9', 'Pilot_10', 'Pilot_11', 'Pilot_12', 'Pilot_13', 'Pilot_14', 'Pilot_15', 'Pilot_17', 'Pilot_18', 'Pilot_19', 'Pilot_20', 'Pilot_21']\n",
+    "subjects = ['SUB_01', 'SUB_02', 'SUB_03', 'SUB_04', 'SUB_05', 'SUB_06', 'SUB_07', 'SUB_08', 'SUB_09', 'SUB_10', 'SUB_11', 'SUB_12', 'SUB_13', 'SUB_14', 'SUB_15', 'SUB_16', 'SUB_17', 'SUB_18', 'SUB_19'] \n",
     "PATTERN = 'Overlay'\n",
-    "subj_path = ['../../Experiments/data/Two_Obj/' + PATTERN + '/' + sub + '/' for sub in subjects]\n",
+    "subj_path = [f'C:/Users/yyao/Downloads/SVAD/{sub}/' for sub in subjects]\n",
     "nb_subj = len(subjects)\n",
     "bads = [['A30', 'B25'], ['B25'], ['B25'], [], ['A31', 'B31'], ['B25'], ['A30', 'B25'], ['A30', 'B25'], ['B25'], ['B25', 'B26'], ['A30', 'B25'], ['B31'], ['B25', 'A23'], ['A30', 'B25'], ['B25'], ['B25'], ['A30', 'B25'], ['A30', 'B25'], ['B25']] # bad channels\n",
     "fsStim = 30\n",
@@ -44,8 +44,8 @@
     "# If all data is preprocessed and saved, set LOAD_ONLY to True to load the data\n",
     "# If all data is to be preprocessed and saved, set ALL_NEW to True\n",
     "# If new data is to be preprocessed, saved, and loaded, set LOAD_ONLY to False and ALL_NEW to False\n",
-    "LOAD_ONLY = True \n",
-    "ALL_NEW = False\n",
+    "LOAD_ONLY = False\n",
+    "ALL_NEW = True\n",
     "eeg_multisubj_list, eog_multisubj_list, feat_all_att_list, feat_all_unatt_list, gaze_multisubj_list, fs, len_seg_list = utils.load_data(subj_path, fsStim, bads, feats_path_folder, PATTERN, singleobj=False, LOAD_ONLY=LOAD_ONLY, ALL_NEW=ALL_NEW)\n",
     "eeg_multisubj_list_SO, eog_multisubj_list_SO, feat_all_list_SO, _, gaze_multisubj_list_SO, fs, len_seg_list_SO = utils.load_data(subj_path, fsStim, bads, feats_path_folder, PATTERN, singleobj=True, LOAD_ONLY=LOAD_ONLY, ALL_NEW=ALL_NEW)"
    ]
@@ -129,14 +129,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "feat_name = 'ObjFlow'\n",
     "# Features being used in the analysis: object optical flow\n",
-    "feat_att_list = objflow_att_list\n",
+    "feat_att_list = objflow_att_list \n",
     "feat_unatt_list = objflow_unatt_list\n",
     "# Dictionary for modalities\n",
     "modal_dict = {'EEG': eeg_multisubj_list, 'EOG': eog_multisubj_list, 'GAZE': gaze_coords_list, 'GAZE_V': gaze_velocity_list\n",
     "              , 'EOG_V': eog_velocity_list, 'SACC': saccade_multisubj_list}\n",
     "if SINGLEOBJ:\n",
-    "    feat_list_SO = objflow_list_SO\n",
+    "    feat_list_SO = objflow_list_SO \n",
     "    modal_dict_SO = {'EEG': eeg_multisubj_list_SO, 'EOG': eog_multisubj_list_SO, 'GAZE': gaze_coords_list_SO, 'GAZE_V': gaze_velocity_list_SO\n",
     "                  , 'EOG_V': eog_velocity_list_SO, 'SACC': saccade_multisubj_list_SO}"
    ]
@@ -152,7 +153,7 @@
     "L_Stim = int(fsStim/2) \n",
     "offset_EEG = 1 \n",
     "offset_Stim = 0 \n",
-    "trial_len_list = [5, 30, 45]"
+    "trial_len_list = [30]"
    ]
   },
   {
@@ -181,9 +182,11 @@
    "outputs": [],
    "source": [
     "CALCU_NEW_SUBJ_ONLY = False # Set to True to calculate the results for the new subject(s) only\n",
-    "new_subj = ['Pilot_20', 'Pilot_21']\n",
+    "new_subj = ['SUB_18', 'SUB_19'] \n",
     "new_subj_idx = [subjects.index(sub) for sub in new_subj]\n",
-    "Subj_Set = new_subj_idx if CALCU_NEW_SUBJ_ONLY else range(nb_subj)"
+    "Subj_Set = new_subj_idx if CALCU_NEW_SUBJ_ONLY else range(nb_subj)\n",
+    "BOOTSTRAP = True # Do not trust the printed out p-values if set to True; Use permutation test instead\n",
+    "PERMU_TEST = True # Whether to calculate the significance level of accuracy; Takes much longer time to run if set to True"
    ]
   },
   {
@@ -199,10 +202,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for Subj_ID in Subj_Set:\n",
-    "    for modal in modal_dict.keys():\n",
-    "        PLOT = True if modal == 'EEG' else False\n",
-    "        pipe_corr_att_or_unatt(Subj_ID, modal_dict[modal], feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, TRAIN_WITH_ATT=True, PLOT=PLOT, figure_dir=figure_dirs[modal], SAVERES=True, table_dir=table_dirs[modal], OVERWRITE=True, REGFEATS=False)"
+    "for modal in modal_dict.keys():\n",
+    "    PLOT = True if modal == 'EEG' else False\n",
+    "    for Subj_ID in Subj_Set:    \n",
+    "        pipe_corr_att_or_unatt(Subj_ID, modal_dict[modal], feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, TRAIN_WITH_ATT=True, PLOT=PLOT, figure_dir=figure_dirs[modal], SAVERES=True, table_dir=table_dirs[modal], OVERWRITE=True, REGFEATS=False, feat_name=feat_name)"
    ]
   },
   {
@@ -225,17 +228,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for Subj_ID in Subj_Set:\n",
-    "    for modal in modal_dict.keys():\n",
-    "        pipe_vad_mm(Subj_ID, modal_dict[modal], feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs[modal], OVERWRITE=True, REGFEATS=False, SAVECORR=True)"
+    "for modal in modal_dict.keys():\n",
+    "    for Subj_ID in Subj_Set:\n",
+    "        pipe_vad_mm(Subj_ID, modal_dict[modal], feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs[modal], OVERWRITE=True, REGFEATS=False, SAVECORR=True, BOOTSTRAP=BOOTSTRAP, feat_name=feat_name, PERMU_TEST=PERMU_TEST)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -269,17 +265,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for Subj_ID in Subj_Set:\n",
-    "    for reg, modal in reg_dict.items():\n",
-    "        table_path = f'tables/{PATTERN}/{reg}/'\n",
-    "        utils.create_dir(table_path, CLEAR=False)\n",
-    "        PLOT = (reg.split('-')[0] == 'EEG')\n",
-    "        if PLOT:\n",
-    "            figure_path = f'figures/{PATTERN}/{reg}/'\n",
-    "            utils.create_dir(figure_path, CLEAR=False)\n",
-    "        else:\n",
-    "            figure_path = None\n",
-    "        pipe_vad_mm(Subj_ID, modal[0], modal[1], modal[2], fs, 1, 1, 0, 0, trial_len_list, table_path, OVERWRITE=True, REGFEATS=False, SAVECORR=True)"
+    "for reg, modal in reg_dict.items():\n",
+    "    table_path = f'tables/{PATTERN}/{reg}/'\n",
+    "    utils.create_dir(table_path, CLEAR=False)\n",
+    "    PLOT = (reg.split('-')[0] == 'EEG')\n",
+    "    if PLOT:\n",
+    "        figure_path = f'figures/{PATTERN}/{reg}/'\n",
+    "        utils.create_dir(figure_path, CLEAR=False)\n",
+    "    else:\n",
+    "        figure_path = None\n",
+    "    for Subj_ID in Subj_Set:\n",
+    "        pipe_vad_mm(Subj_ID, modal[0], modal[1], modal[2], fs, 1, 1, 0, 0, trial_len_list, table_path, OVERWRITE=True, REGFEATS=False, SAVECORR=True, BOOTSTRAP=BOOTSTRAP, feat_name=feat_name, PERMU_TEST=PERMU_TEST)"
    ]
   },
   {
@@ -314,13 +310,34 @@
    "source": [
     "montage = mne.channels.make_standard_montage('biosemi64')\n",
     "for region in region_dict.keys():\n",
+    "    fn = region + '-OF' \n",
+    "    vis_collection = region_dict[region]\n",
+    "    vis_collection_indices = [montage.ch_names.index(ch) for ch in vis_collection]\n",
+    "    data = reg_dict['EEG-EOG&GAZE_V']\n",
+    "    vis_collection_indices_expand = [range(i*L_EEG, (i+1)*L_EEG) for i in vis_collection_indices]\n",
+    "    vis_collection_indices_expand = [item for sublist in vis_collection_indices_expand for item in sublist]\n",
+    "    eeg_subset = [eeg[:,vis_collection_indices_expand,:] for eeg in data[0]]\n",
+    "    for Subj_ID in Subj_Set:\n",
+    "        # pipe_vad_mm(Subj_ID, eeg_subset, data[1], data[2], fs, 1, 1, 0, 0, trial_len_list, 'tables/Overlay/EEG-EOG&GAZE_V/', OVERWRITE=True, feat_name=fn, REGFEATS=False, BOOTSTRAP=BOOTSTRAP, PERMU_TEST=PERMU_TEST)\n",
+    "        pipe_vad(Subj_ID, eeg_subset, data[1], data[2], fs, 1, 1, 0, 0, trial_len_list, 'tables/Overlay/EEG-EOG&GAZE_V/', OVERWRITE=True, feat_name=fn, REGFEATS=False, BOOTSTRAP=BOOTSTRAP, PERMU_TEST=PERMU_TEST)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "montage = mne.channels.make_standard_montage('biosemi64')\n",
+    "for region in region_dict.keys():\n",
+    "    fn = region + '-OF' \n",
     "    vis_collection = region_dict[region]\n",
     "    vis_collection_indices = [montage.ch_names.index(ch) for ch in vis_collection]\n",
     "    data = modal_dict['EEG']\n",
     "    eeg_subset = [eeg[:,vis_collection_indices,:] for eeg in data]\n",
     "    for Subj_ID in Subj_Set:\n",
-    "        # pipe_vad_mm(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=region+'-OF', REGFEATS=False)\n",
-    "        pipe_vad(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=region+'-OF', REGFEATS=False)"
+    "        # pipe_vad_mm(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=fn, REGFEATS=False, BOOTSTRAP=BOOTSTRAP, PERMU_TEST=PERMU_TEST)\n",
+    "        pipe_vad(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=fn, REGFEATS=False, BOOTSTRAP=BOOTSTRAP, PERMU_TEST=PERMU_TEST)"
    ]
   },
   {
@@ -330,6 +347,7 @@
    "outputs": [],
    "source": [
     "for run in range(1, 11):\n",
+    "    fn = f'Run-{run}-OF' \n",
     "    # remove the channels in the parietal_occipital region\n",
     "    collection_refined = [ch for ch in montage.ch_names if ch not in region_dict['parietal_occipital']]\n",
     "    vis_collection = random.sample(collection_refined, 4)\n",
@@ -338,8 +356,8 @@
     "    data = modal_dict['EEG']\n",
     "    eeg_subset = [eeg[:,vis_collection_indices,:] for eeg in data]\n",
     "    for Subj_ID in Subj_Set:\n",
-    "        # pipe_vad_mm(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=f'Run-{run}-Rand4Ref-OF', REGFEATS=False)\n",
-    "        pipe_vad(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=f'Run-{run}-Rand4Ref-OF', REGFEATS=False)"
+    "        # pipe_vad_mm(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=fn, REGFEATS=False, BOOTSTRAP=BOOTSTRAP, PERMU_TEST=PERMU_TEST)\n",
+    "        pipe_vad(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=fn, REGFEATS=False, BOOTSTRAP=BOOTSTRAP, PERMU_TEST=PERMU_TEST)"
    ]
   },
   {
@@ -364,7 +382,7 @@
    "source": [
     "nested_data = [modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['SACC']]\n",
     "nested_aug_data = [modal_dict_SO['EEG'], feat_list_SO, None, modal_dict_SO['SACC']]\n",
-    "pipe_saccade(nested_data, nested_aug_data, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dir=table_dirs['EEG'], OVERWRITE=True, SYNMASK=False, REGFEATS=False)"
+    "pipe_saccade(nested_data, nested_aug_data, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dir=table_dirs['EEG'], OVERWRITE=True, SYNMASK=False, REGFEATS=False, BOOTSTRAP=BOOTSTRAP, feat_name=feat_name)"
    ]
   },
   {
@@ -377,7 +395,7 @@
     "    name = f'Run{run}-ObjFlow'\n",
     "    nested_data = [modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['SACC']]\n",
     "    nested_aug_data = [modal_dict_SO['EEG'], feat_list_SO, None, modal_dict_SO['SACC']]\n",
-    "    pipe_saccade(nested_data, nested_aug_data, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dir=table_dirs['EEG'], OVERWRITE=True, SYNMASK=True, feat_name=name, REGFEATS=False)"
+    "    pipe_saccade(nested_data, nested_aug_data, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dir=table_dirs['EEG'], OVERWRITE=True, SYNMASK=True, feat_name=name, REGFEATS=False, BOOTSTRAP=BOOTSTRAP)"
    ]
   },
   {
@@ -421,7 +439,7 @@
     "    table_path = f'tables/{PATTERN}/{comb}/'\n",
     "    utils.create_dir(table_path, CLEAR)\n",
     "    for Subj_ID in Subj_Set:\n",
-    "        pipe_vad_mm(Subj_ID, modal[0], feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_path, dim_list_EEG=modal[1], OVERWRITE=True, nb_comp_into_account=2)"
+    "        pipe_vad_mm(Subj_ID, modal[0], feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_path, dim_list_EEG=modal[1], OVERWRITE=True, nb_comp_into_account=2, BOOTSTRAP=BOOTSTRAP, feat_name=feat_name, PERMU_TEST=PERMU_TEST)"
    ]
   },
   {
@@ -446,10 +464,10 @@
    "source": [
     "# Get the results for either all subjects or new subjects\n",
     "if SINGLEOBJ:\n",
-    "    for Subj_ID in Subj_Set:\n",
-    "        for modal in modal_dict_SO.keys():\n",
-    "            V_eeg_SO, V_stim_SO = pipe_single_obj(Subj_ID, modal_dict_SO[modal], feat_list_SO, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, figure_dirs[modal], table_dirs[modal], saccade_multisubj_list=None, n_components=3, PLOT=False, OVERWRITE=True)\n",
-    "            pipe_vad(Subj_ID, modal_dict[modal], feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs[modal], V_eeg=V_eeg_SO, V_Stim=V_stim_SO, OVERWRITE=True, REGFEATS=False)"
+    "    for modal in modal_dict_SO.keys():\n",
+    "        for Subj_ID in Subj_Set:\n",
+    "            V_eeg_SO, V_stim_SO = pipe_single_obj(Subj_ID, modal_dict_SO[modal], feat_list_SO, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, figure_dirs[modal], table_dirs[modal], saccade_multisubj_list=None, n_components=3, PLOT=False, OVERWRITE=True, feat_name=feat_name)\n",
+    "            pipe_vad(Subj_ID, modal_dict[modal], feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs[modal], V_eeg=V_eeg_SO, V_Stim=V_stim_SO, OVERWRITE=True, REGFEATS=False, BOOTSTRAP=BOOTSTRAP, feat_name=feat_name, PERMU_TEST=PERMU_TEST)"
    ]
   },
   {
